# OpenMMPol

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  DOC.md  Dockerfile  Dockerfile-intel  Makefile  README.md  compile.csh  config.cmake  coulomb_kernel.f90  electrostatics.f90  energy.f90  forces.f90  forces_functions.f90  main.f90  main_amoeba.f90  mmpol.f90  mmpol.py  mmpol_init.f90  mmpol_process.f90  multipoles_functions.f90  openMMPol.md  polarization.f90  polarization_functions.f90  precision.f90  pyproject.toml  rotate_multipoles.f90  setup.py  solvers.f90  test24.mmp  test24_noqp.out  wrapper.f90
.github/workflows/: main.yml
app/: CMakeLists.txt  ommp_pp.c  ommp_xyz2mmp.c
cmake/: BuildUtils.cmake  FindcJSON.cmake  GetConfigArguments.cmake  GetGitVersion.cmake  openmmpol-config-version.cmake.in  openmmpol-config.cmake.in
config/: CMakeLists.txt  openmmpol-config.cmake.in  openmmpol.cmake.in  openmmpol_const.h.in  template.pc
config/cmake/: GetConfigArguments.cmake  GetGitVersion.cmake
include/: _openmmpol.h  _openmmpol_const.h  elements.h  f_cart_components.h  openmmpol.h  openmmpol_const.h.in  version.h.in
input-preparation/: ommp_ip.py
input-preparation-data/models/: solvents.txt
input-preparation-data/test_cases/: 4xb5.arc  PCP_finalopt.mol2  T2_ntd.gro  drompa.xyz  flavone_mecy.mol2  flavone_meoh.mol2  ocpo.mol2  tests.txt
input-preparation/topology_assignament/: clean_db.json  create_clean_db.py  db_amber.json  requirements.txt  smiles_db.py  topas.py  topology_assign.py
logo/: README.md
python/pyopenmmp/: setup.py
python/pyopenmmpol/: setup.py
pythonapi/: CMakeLists.txt  pyproject.toml
pythonapi/pyopenmmpol/: CMakeLists.txt  __init__.py  __version__.py.in  ommp_ip.py  pyommp_interface.cpp
pythonapi/pyopenmmpol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pythonapi/pyopenmmpol/ommp_ip/: __init__.py  ommp_ip.py
pythonapi/pyopenmmpol/topology_prm_assign/: __init__.py  ommp_tpa.py  tpa.py
src/: CMakeLists.txt  adjacency_matrix.f03  coulomb_kernel.f03  coulomb_kernel.f90  electrostatics.f03  electrostatics.f90  elstat.f03  elstat.f90  energy.f90  forces.f03  forces.f90  forces_functions.f03  main.F90  main_amoeba.F90  mmpol.f03  mmpol.f90  mmpol_init.f03  mmpol_init.f90  mmpol_process.f03  mmpol_process.f90  mod_adjacency_mat.F90  mod_adjacency_mat.f03  mod_adjacency_mat.f90  mod_bicubic_interp.f90  mod_bonded.F90  mod_bonded.f90  mod_c_interface.F90  mod_c_interface.f90  mod_constants.F90  mod_constants.f03  mod_constants.f90  mod_electrostatics.F90  mod_electrostatics.f90  mod_geomgrad.F90  mod_geomgrad.f90  mod_inputloader.F90  mod_inputloader.f03  mod_inputloader.f90  mod_interface.F90  mod_interface.f03  (+62 more)
src/fast_multipoles/: mod_fmm.F90  mod_fmm.f90  mod_fmm_interface.F90  mod_fmm_utils.F90  mod_harmonics.f90  mod_octatree.F90  mod_octatree.f90  mod_ribtree.F90  mod_ribtree.f90  mod_tree.F90  mod_tree.f90
src/test_programs/: test_energy.c  test_energy.py  test_init.F90  test_init.c  test_init_hdf5.c  test_init_xyz.c  test_init_xyz.py  test_ipd.F90  test_ipd.c  test_ipd.py  test_potential_hdf5.c  test_potential_xyz.c  test_reinit.c  test_tmp.F90
tests/: 1ao6_amber_mmp.json  1ao6_amoeba_mmp.json  1ao6_amoeba_xyz.json  1ao6_amoeba_xyz_LS.json  1ao6_cut_amber_mmp.json  1ao6_cut_amoeba_mmp.json  1crn_amber_mmp.json  1crn_amber_xyz.json  1crn_amoeba_mmp.json  1crn_amoeba_xyz.json  1crn_amoeba_xyz_LS.json  1ei7_amoeba_xyz_LS.json  1ei7poly_amoeba_xyz_LS.json  1hto_amoeba_xyz_LS.json  1htopoly_amoeba_xyz_LS.json  1ohf_amoeba_xyz_LS.json  1ohfpoly_amoeba_xyz_LS.json  1stm_amoeba_xyz_LS.json  1stm_qmtyr.json  1stmpoly_amoeba_xyz_LS.json  1ubq_amber_mmp.json  1ubq_amoeba_mmp.json  1ubq_amoeba_xyz.json  1ubq_amoeba_xyz_LS.json  1uf2_amoeba_xyz_LS.json  1uf2poly_amoeba_xyz_LS.json  2d94_amoeba_xyz.json  2d94_amoeba_xyz_LS.json  3kic_amoeba_xyz_LS.json  3kicpoly_amoeba_xyz_LS.json  CMakeLists.txt  NMA_amber_mmp.json  NMA_amoeba_mmp.json  NMA_amoeba_xyz.json  NMA_cut_amber_mmp.json  NMA_cut_amoeba_mmp.json  TestsCmake.txt  alacap_amoeba_xyz.json  compare_full_pot.py  compare_geomgrad.py  (+14 more)
tests/1ao6/: EF_1.txt  ENE_0_AMOEBA_CUT10.ref  ENE_0_WANG_AL_CUT10.ref  ENE_1_AMOEBA_CUT10.ref  ENE_1_WANG_AL_CUT10.ref  FULL_POTENTIAL.ref  IPD_0_AMOEBA_CUT10.ref  IPD_0_WANG_AL_CUT10.ref  IPD_1_AMOEBA_CUT10.ref  IPD_1_WANG_AL_CUT10.ref  MM.mol2  input.xyz  input_WANG_AL.mmp  input_WANG_AL_CUT10.mmp
tests/1crn/: EF_1.txt  ENE_0_AMOEBA.ref  ENE_0_WANG_AL.ref  ENE_1_AMOEBA.ref  ENE_1_WANG_AL.ref  FULL_POTENTIAL.ref  FULL_POTENTIAL_AMBER99SB.ref  IPD_0_AMOEBA.ref  IPD_0_WANG_AL.ref  IPD_1_AMOEBA.ref  IPD_1_WANG_AL.ref  MM.mol2  input.xyz  input_AMBER99SB.xyz  input_AMOEBA.mmp  input_WANG_AL.mmp  summary_AMBER99SB.ref  summary_AMOEBA.ref  summary_WANG_AL.ref
tests/1ei7/: input.xyz
tests/1ohf/: input.xyz  input_poly.xyz  input_poly.xyz.REMOVED.git-id
tests/1stm/: input.xyz  input_qmtyr.xyz
tests/1ubq/: EF_1.txt  ENE_0_AMOEBA.ref  ENE_0_WANG_AL.ref  ENE_1_AMOEBA.ref  ENE_1_WANG_AL.ref  FULL_POTENTIAL.ref  FULL_POTENTIAL_LS.ref  IPD_0_AMOEBA.ref  IPD_0_WANG_AL.ref  IPD_1_AMOEBA.ref  IPD_1_WANG_AL.ref  MM.mol2  amoeba_mmp.json  amoeba_xyz.json  input.xyz  input_AMOEBA.mmp  input_WANG_AL.mmp  summary_AMOEBA.ref  summary_WANG_AL.ref
tests/1uf2/: input_poly.xyz  input_poly.xyz.REMOVED.git-id
tests/2d94/: FULL_POTENTIAL.ref  input.xyz
tests/N-methylacetamide/: EF_0.txt  EF_1.txt  ENE_0_AMOEBA.ref  ENE_0_WANG_AL.ref  ENE_1_AMOEBA.ref  ENE_1_WANG_AL.ref  FULL_POTENTIAL.ref  IPD_0_AMBER_AL.ref  IPD_0_AMOEBA.ref  IPD_0_AMOEBA_CUT.ref  IPD_0_WANG_AL.ref  IPD_0_WANG_AL_CUT.ref  IPD_1_AMOEBA.ref  IPD_1_AMOEBA_CUT.ref  IPD_1_WANG_AL.ref  IPD_1_WANG_AL_CUT.ref  MM.mol2  QM.mol2  QM.xyz  input.mmp  (+7 more)
tests/test_programs/: CMakeLists.txt
tests/test_programs/C/: test_SI_init.c
tests/test_programs/F03/: test_SI_geomgrad_num.f90
tests/test_programs/Python/: test_energy.py  test_geomgrad_xyz_num.py
toolchain/: generic.cmake  gnu.cmake  intel.cmake
utils/pythonapi/: CMakeLists.txt
utils/pythonapi/src/: pyommp_interface.cpp
(+93 files in other folders)
