[project]
name = "pyopenmmpol"
description = "Python interface of OpenMMPol library"

authors = [
  {name = "Mattia Bondanza", email = "mattia.bondanza@unipi.it"},
  {name = "Filippo Lipparini", email = "filippo.lipparini@unipi.it"},
  {name = "Benedetta Mennucci", email = "benedetta.mennucci@unipi.it"},
]
license = {text = "LGPL v3"}

classifiers = [
  "Programming Language :: Python :: 3",
]

dependencies = [
  "numpy >= 1.17,< 2.0.0",
  "scipy >= 1.13",
  "MDAnalysis >= 2.7.0",
  "pysmiles >= 2.0.0",
  "networkx >= 3.2.1"
]

dynamic = [
  "version",
]

requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/Molecolab-Pisa/OpenMMPol"
"Bug Tracker" = "https://github.com/Molecolab-Pisa/OpenMMPol/issues"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.build.targets.wheel]
packages = ["pyopenmmpol"]

[tool.hatch.build.targets.sdist]
exclude = [
  "build",
]

[tool.hatch.build]
include = [
  "pyopenmmpol/*.so",
  "pyopenmmpol/ommp_ip",
  "pyopenmmpol/topology_prm_assign"
]
artifacts = [
  "pyopenmmpol/*.so"
]

[tool.hatch.version]
path = "pyopenmmpol/__version__.py"

[project.scripts]
ommp-ip = "pyopenmmpol.ommp_ip:ommp_ip_main"
ommp-tpa = "pyopenmmpol.topology_prm_assign.ommp_tpa:ommp_tpa_main"
